--- a/laboratoire/angular.json
+++ b/laboratoire/angular.json
@@ -1,9 +1,12 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b210fcc6-bc0b-4c6f-9528-69cb26cc6f5a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "laboratoire": {
+    "Laboratoire": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/laboratoire",
+            "outputPath": "dist/Laboratoire",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -68,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "laboratoire:build:production"
+              "browserTarget": "Laboratoire:build:production"
             },
             "development": {
-              "browserTarget": "laboratoire:build:development"
+              "browserTarget": "Laboratoire:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "laboratoire:build"
+            "browserTarget": "Laboratoire:build"
           }
         },
         "test": {
@@ -94,6 +98,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -102,5 +107,5 @@
       }
     }
   },
-  "defaultProject": "laboratoire"
+  "defaultProject": "Laboratoire"
 }
